--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/fonts.css);
+@import url(./blocks/page/page.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/profile/profile.css);
+@import url(./blocks/places-grid/places-grid.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/popup/index.css);
+@import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(./blocks/popup/__input/__input-error_active/popup__input-error_active.css);
+@import url(./blocks/popup/__save-btn/__save-btn_inactive/popup__save-btn_inactive.css);
+@import url(./blocks/popup/__container/_type/popup__container_type_avatar.css);
+@import url(./blocks/places-grid/__like-container/places-grid__like-container.css);
+@import url(./blocks/places-grid/__like-counter/places-grid__like-counter.css);
+@import url(./blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(./blocks/popup/__container/_type/popup__container_type_confirm.css);
+@import url(./blocks/popup/__text/_type/popup__text_type_confirm.css);
+@import url(./blocks/popup/__save-btn/_type/popup__save-btn_type_confirm.css);
